fix whitespace gap between divs and add line endings

--- a/boilerplate.css
+++ b/boilerplate.css
@@ -1,48 +1,48 @@
 @keyframes slideDown {
     0% {
-        transform: translateY(0%)
+        transform: translateY(0%);
     }
 
     90% {
-        transform: translateY(0%)
+        transform: translateY(0%);
     }
 
     100% {
-        transform: translateY(100%)
+        transform: translateY(100%);
     }
 }
 
 @keyframes flyIn {
     0% {
-        opacity: 0
+        opacity: 0;
     }
 
     100% {
-        opacity: 1
+        opacity: 1;
     }
 }
 
 @keyframes flyOut {
     0% {
-        opacity: 1
+        opacity: 1;
     }
 
     100% {
-        opacity: 0
+        opacity: 0;
     }
 }
 
 @keyframes fadeIn {
     0% {
-        opacity: 0
+        opacity: 0;
     }
 
     15% {
-        opacity: 0
+        opacity: 0;
     }
 
     100% {
-        opacity: 1
+        opacity: 1;
     }
 }
 
@@ -55,24 +55,24 @@ textarea {
     font-family: inherit;
     font-size: 100%;
     line-height: 1.15;
-    margin: 0
+    margin: 0;
 }
 
 button,
 input {
-    overflow: visible
+    overflow: visible;
 }
 
 button,
 select {
-    text-transform: none
+    text-transform: none;
 }
 
 button,
 [type=button],
 [type=reset],
 [type=submit] {
-    -webkit-appearance: button
+    -webkit-appearance: button;
 }
 
 html,
@@ -161,7 +161,7 @@ video {
     border: 0;
     font-size: 100%;
     font: inherit;
-    vertical-align: baseline
+    vertical-align: baseline;
 }
 
 article,
@@ -175,21 +175,21 @@ hgroup,
 menu,
 nav,
 section {
-    display: block
+    display: block;
 }
 
 body {
-    line-height: 1
+    line-height: 1;
 }
 
 ol,
 ul {
-    list-style: none
+    list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none
+    quotes: none;
 }
 
 blockquote:before,
@@ -197,61 +197,61 @@ blockquote:after,
 q:before,
 q:after {
     content: "";
-    content: none
+    content: none;
 }
 
 table {
     border-collapse: collapse;
-    border-spacing: 0
+    border-spacing: 0;
 }
 
 html {
     font-family: "Noto Sans";
     font-style: normal;
-    font-weight: 500
+    font-weight: 500;
 }
 
 a {
     color: inherit;
-    text-decoration: none
+    text-decoration: none;
 }
 
 em {
-    font-weight: 700
+    font-weight: 700;
 }
 
 html {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: inherit
+    box-sizing: inherit;
 }
 
 html {
     font-size: 100%;
     -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%
+    -ms-text-size-adjust: 100%;
 }
 
 .cf:before,
 .cf:after {
     content: " ";
-    display: table
+    display: table;
 }
 
 .cf:after {
-    clear: both
+    clear: both;
 }
 
 .hidden {
-    display: none
+    display: none;
 }
 
 html,
 body {
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
+    -moz-osx-font-smoothing: grayscale;
 }
